[build-system]
requires = [
    "setuptools>=68.0.0",
    "wheel",
    "aiohttp>=3.8.1",
    "pytz",
    "certifi",
]
build-backend = "setuptools.build_meta"

[project]
name = "kia_hyundai_api"
version = "1.4.0"
authors = [
  { name="Brendan Dahl", email="dahl.brendan@gmail.com" },
]
description = "Kia Uvo Api Wrapper"
readme = "README.md"
requires-python = ">=3.12.0, <4"
dependencies = [
    "aiohttp>=3.8.1",
    "pytz",
    "certifi",
]
classifiers = [
    "Framework :: AsyncIO",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
]
keywords = [
    "Kia",
    "Uvo",
    "rest-mini",
    "api"
]

[project.urls]
"Homepage" = "https://github.com/dahlb/kia_hyundai_api"
"Bug Tracker" = "https://github.com/dahlb/kia_hyundai_api/issues"